--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,14 @@
 <footer class="footer">
   <p>
-    Built with
+    © 2024 Built with
     <a class="highlight-link" href="https://jekyllrb.com/"target="_blank" rel="noreferrer">
       Jekyll
     </a>
-    and powered by
+    using the 
+    <a class="highlight-link" href="https://github.com/longpdo/neumorphism"target="_blank" rel="noreferrer">
+      Neumorphism
+    </a>
+    theme, and powered by
     <a class="highlight-link" href="https://pages.github.com/" target="_blank" rel="noreferrer">
       Github Pages
     </a>
